# pvsneslib

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  REVIEW_NOTES.md  annotated.html  annotated_dup.js  audio_2effects_2effects_8c-example.html  audio_2effectsandmusic_2effectsandmusic_8c-example.html  audio_2music_2_music_8c-example.html  audio_2music_greater_than32k_2music_greater_than32k_8c-example.html  audio_2tada_2_tada_8c-example.html  background_8h.html  background_8h.js  background_8h_source.html  breakpoints_2src_2breakpoints_8c-example.html  classes.html  console_8h.html  console_8h.js  console_8h_source.html  debug_2debug_8c-example.html  dir_1fce5620edc95505dc9b3bb80528afca.html  dir_1fce5620edc95505dc9b3bb80528afca.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dma_8h.html  dma_8h.js  dma_8h_source.html  dockerrun.sh  examples.html  examples.js  files.html  fullsnes.txt  functions.html  functions_vars.html  games_2breakout_2breakout_8c-example.html  (+136 more)
pvsneslib/: CMakeLists.txt  Makefile  aa.pnproj  aa.pnps  build_pvsneslib.bat  docs.css  pvsneslib.dox  pvsneslib.pnproj  pvsneslib.pnps  pvsneslib_license.txt  pvsneslib_snesmod.txt  pvsneslib_version.txt.in  pvsneslib_wla-dx-readme.txt  wladx_options.txt
pvsneslib/docs/: dox_extra.css  dox_footer.html  dox_header.html  pvsneslib.dox
pvsneslib/docs/html/: a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00023.html  a00024.html  a00025.html  a00026.html  a00027.html  a00028.html  a00287.html  a00287_source.html  a00290.html  a00290_source.html  a00293.html  a00293_source.html  a00296.html  a00296_source.html  a00299_source.html  a00302.html  a00302_source.html  a00305.html  a00305_source.html  (+213 more)
pvsneslib/docs/html/search/: all_0.js  (+124 more)
pvsneslib/docs/latex/: a00287.tex  a00290.tex  a00293.tex  a00296.tex  a00302.tex  a00305.tex  a00308.tex  a00311.tex  a00314.tex  a00317.tex  a00320.tex  a00323.tex  a00326.tex  a00329.tex  a00332.tex  a00335.tex  a00338.tex  a00341.tex  a00344.tex  a00347.tex  a00350.tex  a00352.tex  a00353.tex  a00356.tex  a00358.tex  a00359.tex  a00360.tex  a00362.tex  a00364.tex  a00365.tex  a00366.tex  a00368.tex  a00370.tex  a00371.tex  a00372.tex  a00374.tex  a00376.tex  a00377.tex  a00378.tex  a00380.tex  (+104 more)
pvsneslib/include/: snes.h
pvsneslib/include/snes/: background.h  console.h  dma.h  fixed.h  input.h  interrupt.h  interrupts.h  libversion.h  libversion.h.in  lzss.h  map.h  object.h  pad.h  pads.h  pixel.h  scores.h  snestypes.h  sound.h  sprite.h  video.h
pvsneslib/snesmod/: Makefile  convert_tasm_to_wla.py  sm_spc.as7  sm_spc.asm  sm_spc_wla.asm  sm_spc_wla.link
pvsneslib/source/: Makefile  background.c  backgrounds.asm  console.c  consoles.asm  crt0_snes.asm  ctype.c  dma.c  dmas.asm  hdr.asm  input.asm  interrupt.c  interrupts.asm  interrupts.c  libc.asm  libc_c.asm  libc_c.c  libm.asm  libm_c.asm  libm_c.c  libtcc.asm  lzsss.asm  malloc.c  maps.asm  network.asm  objects.asm  pad.c  pads.asm  pads.c  pixel.c  pvsneslibs.asm  scores.asm  sm_spc.asm  snesmodwla.asm  sound.c  sounds.asm  sprite.c  sprites.asm  sprites.c  tasm07.tab  (+4 more)
pvsneslib/template/: Makefile  data.asm  template.c  template.pnproj  template.pnps  template.sym
tools/: CMakeLists.txt  Makefile
tools/816-opt/: Makefile
tools/816-opt/src/: helpers.c  helpers.h  main.c  optimizer.c  optimizer.h
tools/bin2txt/: Makefile  aa.pnproj  aa.pnps  bin2txt.c  bin2txt.pnproj  bin2txt.pnps  readme.md
tools/constify/: Makefile  comp_constify.cmd  constify.cpp  constify.pnproj  constify.pnps
tools/constify/new/: Makefile  constify.c  constify.pnproj
tools/gfx2snes/: Makefile  comp_gfx2snes.cmd  gfx2snes.c  gfx2snes.h  gfx2snes.pnproj  imgtools.c  imgtools.h  loadimg.c  loadimg.h  lodepng.c  lodepng.h  lz77.c  lzss.c  readme.md
tools/gfx4snes/: Makefile  readme.md
tools/gfx4snes/src/: arguments.c  arguments.h  cmdparser.c  common.h  errors.c  errors.h  gfx4snes.c  gfx4snes.h  gradients.c  gradients.h  images.c  images.h  incgener.c  incgener.h  loadbmp.c  loadbmp.h  lodepng.c  lz77.c  lz77.h  mapc.c  maps.c  maps.h  metasprites.c  metasprites.h  palettes.c  palettes.h  tiles.c  tiles.h
tools/smconv/: Makefile  basetypes.h  brr.cpp  comp_smconv.cmd  conversion.cpp  conversion.h  convert.cpp  inputdata.cpp  inputdata.h  io.cpp  io.h  it2spc.cpp  it2spc.h  itloader.cpp  itloader.h  readme.md  smconv.pnps  spc_program.h
tools/snesbrr/: Makefile  cddl1.txt  makeinclude  readme.md  readme.txt  snesbrr.pnproj  snesbrr.pnps
tools/snesbrr/base/: FileStream.cpp  FileStream.cpp.d  FileStream.h  Makefile  MemoryStream.cpp  MemoryStream.cpp.d  MemoryStream.h  OptionParser.cpp  OptionParser.cpp.d  OptionParser.h  Stream.cpp  Stream.cpp.d  Stream.h  StreamException.cpp  StreamException.cpp.d  StreamException.h  basemath.h  basetypes.h  noncopyable.h
tools/snesbrr/brr/: BrrCodec.cpp  BrrCodec.cpp.d  BrrCodec.h  Makefile  main.cpp  main.cpp.d
tools/snesgradient/: fmain.cpp  fmain.dfm  fmain.~cpp  fmain.~h  snesgradient.bpr  snesgradient.cpp  snesgradient.res  snesgradient.tds  snesgradient.~bpr  snesgradient.~cpp
tools/snestools/: Makefile  comp_snestools.cmd  errors.c  errors.h  readme.md  snestools.c  snestools.pnps
tools/tiledpalettequant/: LICENSE  enums.js  index.html  script.js  style.css  worker.js
tools/tilesetextractor/: index.html  tileset-extractor-worker.js  tileset-extractor.css  tileset-extractor.js  tileset-extractor.less
tools/tmx2snes/: L11L1.m16  L11L2.m16  LICENSE  Makefile  Thumbs.db  aa.pnproj  aa.pnps  cute_tiled.h  cute_tiled.h_  map1_1.json  map1_1.tmx  readme.md  realL11L1.m16  realmap1_1.s16  tiled.exe - Raccourci (2).lnk  tmx2snes.c
tools/tmx2snes/src/: arguments.c  arguments.h  cmdparser.c  cmdparser.h  cute_tiled.h  errors.c  errors.h  tiled.c  tiled.h  tmx2snes.c  tmx2snes.h
(+1834 files in other folders)
